src/components/Connections.module.scss
.placeHolder {
  margin-top: 20%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--color-background);
  opacity: 0.1;
  @media (max-width: 768px) {
    margin-top: 35%;
  }
}

.connQty {
  font-family: var(--font-normal);
  font-size: 0.75em;
  margin-left: 3px;
  padding: 2px 7px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  background-color: var(--bg-near-transparent);
  border-radius: 30px;
}

.header {
  display: grid;
  grid-template-columns: 1fr minmax(auto, 290px);
  align-items: center;

  /*
   * the content header has some padding
   * we need to apply some right padding to this container then
   */
  padding-right: 15px;
  @media (--breakpoint-not-small) {
    padding-right: 25px;
  }
}

.inputWrapper {
  margin: 0;
  @media (--breakpoint-not-small) {
    margin: 0 25px;
  }

  width: 100%;
  max-width: 350px;
  justify-self: flex-end;
}

.input {
  -webkit-appearance: none;
  background-color: var(--color-input-bg);
  background-image: none;
  border-radius: 18px;
  border: 1px solid var(--color-input-border);
  box-sizing: border-box;
  color: var(--color-text-secondary);
  display: inline-block;
  font-size: inherit;
  height: 36px;
  outline: none;
  padding: 0 15px;
  transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
  width: 100%;
}

.sourceipContainer {
  display: flex;
  align-items: center;
}

